--- a/LavaStabilization/pom.xml
+++ b/LavaStabilization/pom.xml
@@ -4,84 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>net.scrayos.projectfentimon</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
     <name>LavaStabilization</name>
     <description><![CDATA[Erde: Lava Stabilisierung]]></description>
     <version>1.0.0-SNAPSHOT</version>
-    <groupId>net.scrayos.project-fentimon</groupId>
-    <artifactId>lava-stabilization</artifactId>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-    </properties>
-
-    <repositories>
-        <!-- INTERNAL -->
-        <repository>
-            <id>scrayos-net</id>
-            <url>https://dev.scrayos.net/nexus/content/groups/public/</url>
-        </repository>
-
-        <!-- OFFICIAL -->
-        <repository>
-            <id>spigot</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <repository>
-            <id>paper</id>
-            <url>https://repo.destroystokyo.com/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>junit</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/org/junit/</url>
-        </repository>
-    </repositories>
-
-    <dependencies>
-        <!-- MINECRAFT-SPECIFIC -->
-        <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
-            <artifactId>paper-api</artifactId>
-            <version>1.13.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
-            <artifactId>paper</artifactId>
-            <version>1.13.2-1</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- PROJECT KORRA -->
-        <dependency>
-            <groupId>com.projectkorra</groupId>
-            <artifactId>projectkorra</artifactId>
-            <version>1.8.8</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- ANNOTATIONS -->
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>17.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.errorprone</groupId>
-            <artifactId>error_prone_annotations</artifactId>
-            <version>2.0.15</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- PROVIDED -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>lavastabilization</artifactId>
+    <packaging>jar</packaging>
 
     <build>
         <finalName>${project.name}</finalName>
@@ -96,21 +29,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <debug>false</debug>
-                    <debuglevel>lines,vars,source</debuglevel>
-                    <optimize>true</optimize>
-                    <showDeprecation>true</showDeprecation>
-                    <showWarnings>true</showWarnings>
-                    <source>${java.version}</source>
-                    <staleMillis>0</staleMillis>
-                    <target>${java.version}</target>
-                    <useIncrementalCompilation>true</useIncrementalCompilation>
-                    <verbose>false</verbose>
-                    <compilerArgument>-Xlint:all</compilerArgument>
-                    <testCompilerArgument>-Xlint:all</testCompilerArgument>
-                </configuration>
             </plugin>
         </plugins>
     </build>
