--- a/LavaStabilization/pom.xml
+++ b/LavaStabilization/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>net.scrayos.projectfentimon</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <name>LavaStabilization</name>
     <description><![CDATA[Erde: Lava Stabilisierung]]></description>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <artifactId>lavastabilization</artifactId>
     <packaging>jar</packaging>
 
